--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Fri Oct 07 18:17:29 EDT 2011
+#Fri Oct 07 19:16:05 EDT 2011
 app.grails.version=1.3.7
 app.name=EricFieldIs
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.mysql-connectorj=5.1.12
 plugins.tomcat=1.3.7
