--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Fri Oct 07 19:16:05 EDT 2011
+#Mon Oct 10 22:58:11 EDT 2011
 app.grails.version=1.3.7
 app.name=EricFieldIs
 app.servlet.version=2.4
@@ -7,3 +7,4 @@ app.version=0.1
 plugins.hibernate=1.3.7
 plugins.mysql-connectorj=5.1.12
 plugins.tomcat=1.3.7
+plugins.weceem=1.0
