--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,11 @@
 #Grails Metadata file
-#Mon Oct 10 22:58:11 EDT 2011
+#Sat Oct 15 21:54:05 EDT 2011
 app.grails.version=1.3.7
 app.name=EricFieldIs
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
 plugins.mysql-connectorj=5.1.12
+plugins.spring-security-core=1.2.1
 plugins.tomcat=1.3.7
 plugins.weceem=1.0
