--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,11 @@
 #Grails Metadata file
-#Sat Oct 15 22:13:27 EDT 2011
+#Fri Oct 28 11:36:44 EDT 2011
 app.grails.version=1.3.7
 app.name=EricFieldIs
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
+plugins.image-tools=1.0.5
 plugins.mysql-connectorj=5.1.12
 plugins.spring-security-core=1.2.1
 plugins.tomcat=1.3.7
